# python-project-83

./: Makefile  README.md  database.sql  pyproject.toml  ruff.toml
.github/workflows/: lint.yml  sonar.yml
page_analyzer/: app.py  db.py  parser.py  validators.py
page_analyzer/templates/: base.html  index.html  url.html  urls.html
