[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask",
    "gunicorn",
    "python-dotenv",
    "requests",
    "beautifulsoup4",
]

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "I"]
