[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask",
    "gunicorn",
    "python-dotenv",
    "requests",
    "beautifulsoup4",
    "psycopg2-binary",
    "validators",
]

[build-system]
requires = ["uv"]
build-backend = "uv"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "Q"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]